--- a/sections/customejewwlry.liquid
+++ b/sections/customejewwlry.liquid
@@ -31,6 +31,9 @@
        
                 {% endif %} stroke-width="3" stroke-miterlimit="10" stroke-linecap="round"/>
                 </svg>
+
+
+  
             </div>
           </div>
       </div>
@@ -51,16 +54,25 @@
                 <a href="{{product.url}}">
 
                   <div class="svg-icon-here proudct-svg-one egg-mobile-respinsive">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="309" height="380" viewBox="0 0 309 380" fill="none">
-                      <path d="M0.823706 315.196L0.823737 315.196L24.0002 376.928L23.5321 377.104L24.0002 376.928C24.5757 378.462 25.7871 379.364 27.0375 379.364L281.463 379.5V379.497H281.963C283.214 379.497 284.425 378.597 285 377.064L308.176 315.351C308.608 314.199 308.608 312.869 308.176 311.716L285.749 251.995L285.683 251.819L285.749 251.643L308.176 191.922C308.608 190.769 308.608 189.44 308.176 188.291L285.749 128.549L285.683 128.373L285.749 128.197L308.176 68.4322L308.644 68.6078L308.176 68.432C308.608 67.283 308.608 65.9538 308.174 64.8053L308.174 64.8043L284.997 3.07149C284.422 1.53804 283.21 0.635848 281.96 0.635848L28.0858 0.50056L28.088 0.503313H27.0373C25.7865 0.503313 24.5754 1.40289 24.0002 2.93564L24.0001 2.93575L0.823862 64.6487L0.823706 315.196ZM0.823706 315.196C0.392035 314.046 0.392203 312.714 0.823559 311.568L0.823768 311.568L23.2511 251.803L23.3171 251.627L23.2511 251.451L0.823746 191.709L0.823711 191.709M0.823706 315.196L0.823711 191.709M23.3171 128.181L23.2511 128.357L0.823861 188.078L23.3171 128.181ZM23.3171 128.181L23.2511 128.005M23.3171 128.181L23.2511 128.005M23.2511 128.005L0.823862 68.2837M23.2511 128.005L0.823862 68.2837M0.823711 191.709C0.392197 190.561 0.391993 189.231 0.823727 188.078L0.823711 191.709ZM0.823862 68.2837C0.392093 67.1312 0.392047 65.8015 0.823724 64.649L0.823862 68.2837Z" fill="url(#pattern-{{ section.id }}={{forloop.index}})" stroke="black"/>
-                      <defs>
-                      <pattern id="pattern-{{ section.id }}={{forloop.index}}" patternContentUnits="objectBoundingBox" width="1" height="1">
-                      <use xlink:href="#image-{{ section.id }}={{forloop.index}}" transform="translate(-0.0282016) scale(0.00240092 0.00162338)"/>
-                      </pattern>
-                      <image id="image-{{ section.id }}={{forloop.index}}" class="lazyload"  width="440" height="616" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
-                      </defs>
-                      </svg>
-                  
+                 
+                                {% comment %} new svg  {% endcomment %}
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="309" height="380" viewBox="0 0 309 380" fill="none">
+                                  <path d="M282.5 1.5H26.5L1.5 67L24.5 128L1.5 188V191.5L24.5 252L1.5 314.5L27 378.5H282.5L307.5 313L284.5 251.5L307.5 189L284.5 128.5L307.5 66L282.5 1.5Z" fill="#D9D9D9" stroke="black" stroke-width="2"/>
+                                  <mask id="mask0_2649_1591{{forloop.index}}" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="1" width="309" height="378">
+                                  <path d="M282.5 1.5H26.5L1.5 67L24.5 128L1.5 188V191.5L24.5 252L1.5 314.5L27 378.5H282.5L307.5 313L284.5 251.5L307.5 189L284.5 128.5L307.5 66L282.5 1.5Z" fill="#D9D9D9" stroke="black"/>
+                                  </mask>
+                                  <g mask="url(#mask0_2649_1591{{forloop.index}})">
+                                  <path d="M0.823708 315.196L24.0002 376.928C24.5757 378.462 25.7871 379.364 27.0376 379.364L281.463 379.5V379.497H281.963C283.214 379.497 284.425 378.597 285 377.064L308.176 315.351C308.608 314.199 308.608 312.869 308.176 311.716L285.749 251.995L285.683 251.819L285.749 251.643L308.176 191.922C308.608 190.769 308.608 189.44 308.176 188.291L285.749 128.549L285.683 128.373L285.749 128.197L308.176 68.4322C308.608 67.2832 308.608 65.9538 308.174 64.8053L284.997 3.07148C284.422 1.53803 283.21 0.635836 281.96 0.635836L28.0863 0.500549L28.0885 0.503301H27.0373C25.7865 0.503301 24.5754 1.40288 24.0002 2.93563L0.823864 64.6487C0.392049 65.8012 0.392049 67.1311 0.823864 68.2837L23.2511 128.005L23.3171 128.181L23.2511 128.357L0.823864 188.078L0.823708 315.196ZM0.823708 315.196C0.392038 314.046 0.392205 312.714 0.823561 311.568L23.2511 251.803L23.3171 251.627L23.2511 251.451C23.2511 251.451 9.58217 215.04 0.823749 191.709M0.823708 315.196C0.823708 315.196 0.823733 239.934 0.823749 191.709ZM0.823749 191.709C0.392236 190.561 0.39213 189.231 0.823864 188.078C0.823864 188.078 0.823794 190.291 0.823749 191.709Z" fill="url(#pattern-{{ section.id }}={{forloop.index}})"/>
+                                  <path d="M0.823708 315.196L24.0002 376.928M0.823708 315.196L0.823864 188.078M0.823708 315.196C0.392038 314.046 0.392205 312.714 0.823561 311.568L23.2511 251.803L23.3171 251.627L23.2511 251.451C23.2511 251.451 9.58217 215.04 0.823749 191.709M0.823708 315.196C0.823708 315.196 0.823733 239.934 0.823749 191.709M24.0002 376.928L23.5321 377.104M24.0002 376.928C24.5757 378.462 25.7871 379.364 27.0376 379.364L281.463 379.5V379.497H281.963C283.214 379.497 284.425 378.597 285 377.064L308.176 315.351C308.608 314.199 308.608 312.869 308.176 311.716L285.749 251.995L285.683 251.819L285.749 251.643L308.176 191.922C308.608 190.769 308.608 189.44 308.176 188.291L285.749 128.549L285.683 128.373L285.749 128.197L308.176 68.4322M308.176 68.4322L308.644 68.6078M308.176 68.4322C308.608 67.2832 308.608 65.9538 308.174 64.8053L284.997 3.07148C284.422 1.53803 283.21 0.635836 281.96 0.635836L28.0863 0.500549L28.0885 0.503301H27.0373C25.7865 0.503301 24.5754 1.40288 24.0002 2.93563L0.823864 64.6487C0.392049 65.8012 0.392049 67.1311 0.823864 68.2837L23.2511 128.005L23.3171 128.181L23.2511 128.357L0.823864 188.078M0.823864 188.078C0.39213 189.231 0.392236 190.561 0.823749 191.709M0.823864 188.078C0.823864 188.078 0.823794 190.291 0.823749 191.709" stroke="black"/>
+                                  </g>
+                                  <defs>
+                                  <pattern id="pattern-{{ section.id }}={{forloop.index}}" patternContentUnits="objectBoundingBox" width="1" height="1">
+                                  <use xlink:href="#image-{{ section.id }}={{forloop.index}}" transform="translate(0 -0.0692105) scale(0.001 0.000813158)"/>
+                                  </pattern>
+                                  <image id="image-{{ section.id }}={{forloop.index}}" width="1000" height="1400" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
+                                  </defs>
+                                  </svg>
+                {% comment %} new svg End {% endcomment %}
                   </div>
 
 
