home modal id update

--- a/snippets/homemodal.liquid
+++ b/snippets/homemodal.liquid
@@ -15,7 +15,7 @@
         <div class="modal-content-c">
          <h5>{{ settings.menu1 }}</h5>
             {% comment %} modal end  {% endcomment %}
-            {% form 'customer' %}
+            {% form 'customer', id: 'ContactFooter'  %}
                 {{ form.errors | default_errors }}
                
                 <div class="form-wrapper">
