--- a/assets/style.css
+++ b/assets/style.css
@@ -805,6 +805,11 @@ div#suggeationlist {
   border: none;
 }
 
+.menu-tooglewrapper.d-lg-none {
+  position: relative;
+  z-index: 1000;
+}
+
 .bannar-wrapper {
   background: rgb(242, 224, 133);
   position: relative;
@@ -900,11 +905,6 @@ div#suggeationlist {
     width: 150px;
   }
 }
-@media (min-width: 1200px) {
-  .bannar-wrapper .bannar-shape-1 img {
-    width: 190px;
-  }
-}
 @media (min-width: 1400px) {
   .bannar-wrapper .bannar-shape-1 img {
     width: 212px;
@@ -971,7 +971,7 @@ div#suggeationlist {
 }
 @media (min-width: 250px) {
   .bannar-wrapper .bannar-shape-2 img {
-    width: 120px;
+    width: 107px;
   }
 }
 @media (min-width: 992px) {
@@ -1128,9 +1128,6 @@ div#suggeationlist {
 .common-product-wrapper .singel-product-svg-wrapper {
   text-align: center;
   margin: 28px 0;
-}
-.common-product-wrapper .singel-product-svg-wrapper .svg-icon-here {
-  display: inline-block;
 }
 .common-product-wrapper .custome-arrow {
   width: 40px;
