--- a/assets/style.css
+++ b/assets/style.css
@@ -1198,13 +1198,21 @@ div#suggeationlist {
 @media (min-width: 576px) {
   .egg-mobile-respinsive svg {
     width: 309px;
-    height: 383px;
   }
 }
 @media (min-width: 1200px) and (max-width: 1299px) {
   .egg-mobile-respinsive svg {
     width: 300px;
-    height: 383px;
+  }
+}
+@media (min-width: 250px) and (max-width: 575px) {
+  .egg-mobile-respinsive svg {
+    width: 85%;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .egg-mobile-respinsive svg {
+    width: 90%;
   }
 }
 
