--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -1,42 +1,79 @@
-<div class="bannar-wrapper">
-    <div class="bannar-shape-1">
-       <img 
-        data-sizes="auto"
-        data-src="{{ section.settings.img1 | img_url:'' }}" class="lazyload"
-        alt="">
-     </div>
-     <div class="bannar-shape-2">
-       <img data-sizes="auto"
-        data-src="{{ section.settings.img2 | img_url:'' }}" class="lazyload"" alt="">
-     </div>
-     <div class="container-fluid">
-       <div class="row">
-         <div class="col-xl-6 col-md-12 p-0">
-             <div class="bannar-left-image">
-               <img src="data-sizes="auto"
-                data-src="{{ section.settings.img | img_url:'master' }}"
-                data-srcset="{{ section.settings.img | img_url:'grande' }} 300w,
-                {{ section.settings.img | img_url:'2048 x 2048' }} 600w,
-                {{ section.settings.img | img_url:'master' }} 900w" class="lazyload" alt="">
-             </div>
-         </div>
-         <div class="col-xl-6 col-md-12 d-flex align-items-center justify-content-center">
-               <div class="bannar-right-wrapper text-center">
-                 <div class="bannar-wev-image">
-                   <img src="data-sizes="auto"
-                    data-src="{{ section.settings.imgw | img_url:'' }}" class="lazyload"" alt="">
-                 </div>
-                  <h1>{{ section.settings.h1 }}</h1>
-                  <p>{{ section.settings.p }}</p>
-                  <div class="bannar-btn-area">
-                  <a href="{{  section.settings.link }}" class="btn">{{ section.settings.shop }}</a>
-                 </div>
-               </div>
-         </div>
+{% assign favorite_food = "" %}
+ {% for block in section.blocks %}
+    {% case block.type %}
 
+    {% when  'fullwidth'%}
+         
+   <div class="all-bannar-wrapper bannar-wrapper">
+      <div class="fulwidth-wrapper d-flex  align-items-center " style="background-image: url({{ block.settings.img | img_url:'master' }})">
+          <div class="container">
+            <div class="row">
+               <div class="col-12">
+                     <div class="bannar-content text-center bannar-right-wrapper">
+                        <h1 style="color: red; font-size: ;">NY Forever</h1>
+                        <p style="color: red; font-size: ;">We Are Children of Immigrants</p>
+                        <div class="bannar-btn-area">
+                        <a href="{{ block.settings.url}}" class="btn">shop Now</a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+          </div>
+      </div>
+   </div>
+
+    {% when  'twoside'%}
+   
+
+
+ <div class="two-slide-wrapper-{{section.id}}" id="{% if favorite_food == blank or favorite_food.empty? %}{% assign favorite_food = "twoslidehieght" %} {{favorite_food}} {% else %}twoslidehieght-{{forloop.index}}{% endif %}">
+  
+   <div class="bannar-wrapper">
+      <div class="bannar-shape-1">
+         <img 
+          data-sizes="auto"
+          data-src="{{ block.settings.img1 | img_url:'' }}" class="lazyload"
+          alt="">
+       </div>
+       <div class="bannar-shape-2">
+         <img data-sizes="auto"
+          data-src="{{ block.settings.img2 | img_url:'' }}" class="lazyload" alt="">
+       </div>
+       <div class="container-fluid">
+         <div class="row">
+           <div class="col-xl-6 col-md-12 p-0">
+               <div class="bannar-left-image">
+                 <img 
+                  data-src="{{ block.settings.img | img_url:'master' }}"
+                  data-srcset="{{ block.settings.img | img_url:'grande' }} 300w,
+                  {{ block.settings.img | img_url:'2048 x 2048' }} 600w,
+                  {{ block.settings.img | img_url:'master' }} 900w" class="lazyload" alt="">
+               </div>
+           </div>
+           <div class="col-xl-6 col-md-12 d-flex align-items-center justify-content-center">
+                 <div class="bannar-right-wrapper text-center">
+                   <div class="bannar-wev-image">
+                     <img 
+                      data-src="{{ block.settings.imgw | img_url:'' }}" class="lazyload" alt="">
+                   </div>
+                    <h1>{{ block.settings.h1 }}</h1>
+                    <p>{{ block.settings.p }}</p>
+                    <div class="bannar-btn-area">
+                    <a href="{{  block.settings.link }}" class="btn">{{ block.settings.shop }}</a>
+                   </div>
+                 </div>
+           </div>
+  
+         </div>
        </div>
      </div>
-   </div>
+ </div>
+
+
+
+    {% endcase %}
+ {% endfor %}
+
 
 
 {% schema %}
@@ -44,54 +81,75 @@
         "name": "Slider",
         "class": "slider",
         "settings": [
-         {
-            "type": "text",
-            "id": "h1",
-            "label": "Slider Title",
-            "default": "LOUD & PROUD",
-            "placeholder": "LOUD & PROUD"
-         },
-         {
-            "type": "text",
-            "id": "p",
-            "label": "Slider Details",
-            "default": "We Are Children of Immigrats",
-            "placeholder": "We Are Children of Immigrats"
-         },
-         {
-            "type": "text",
-            "id": "shop",
-            "label": "Shop Now",
-            "default": "Shop Now",
-            "placeholder": "Shop Now"
-         },
-         {
-            "type": "url",
-            "id": "link",
-            "label": "Shop Now link",
-            "info": "Button link"
-         },
-         {
-            "type": "image_picker",
-            "id": "img",
-            "label": "Slider Main left Image"
-         },
-         {
-            "type": "image_picker",
-            "id": "imgw",
-            "label": "Slider wave  Image"
-         },
-         {
-            "type": "image_picker",
-            "id": "img1",
-            "label": "Slider Shap 01"
-         },
-         {
-            "type": "image_picker",
-            "id": "img2",
-            "label": "Slider Shap 01"
-         }
+
         ],	
+        "blocks":[
+          {
+           "type": "fullwidth",
+           "name":"Full width",
+           "settings":[
+               {
+                  "type": "image_picker",
+                  "id": "img",
+                  "label": "Slider Main left Image"
+               }
+           ]
+           
+          },
+          {
+            "type":"twoside",
+            "name":"two side",
+            "settings":[
+            {
+               "type": "text",
+               "id": "h1",
+               "label": "Slider Title",
+               "default": "LOUD & PROUD",
+               "placeholder": "LOUD & PROUD"
+            },
+            {
+               "type": "text",
+               "id": "p",
+               "label": "Slider Details",
+               "default": "We Are Children of Immigrats",
+               "placeholder": "We Are Children of Immigrats"
+            },
+            {
+               "type": "text",
+               "id": "shop",
+               "label": "Shop Now",
+               "default": "Shop Now",
+               "placeholder": "Shop Now"
+            },
+            {
+               "type": "url",
+               "id": "link",
+               "label": "Shop Now link",
+               "info": "Button link"
+            },
+            {
+               "type": "image_picker",
+               "id": "img",
+               "label": "Slider Main left Image"
+            },
+            {
+               "type": "image_picker",
+               "id": "imgw",
+               "label": "Slider wave  Image"
+            },
+            {
+               "type": "image_picker",
+               "id": "img1",
+               "label": "Slider Shap 01"
+            },
+            {
+               "type": "image_picker",
+               "id": "img2",
+               "label": "Slider Shap 01"
+            }
+            ]
+          }
+        ],
         "presets": [
             {
               "name": "Bannar"
@@ -99,3 +157,10 @@
         
     }
 {% endschema %}
+
+
+<style>
+   .fulwidth-wrapper{
+      min-height: 600px;
+   }
+</style>
