full with bannar color update

--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -57,8 +57,8 @@
             <div class="row">
                <div class="col-12">
                      <div class="bannar-content {% if block.settings.vertecal == "center" %} text-center {% elsif block.settings.vertecal == 'left' %} text-left {% elsif block.settings.vertecal == 'right' %} text-right {% endif%} bannar-right-wrapper">
-                        <h1 style="color: #000; font-size: {{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
-                        <p style="color: #000; font-size: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
+                        <h1 style="color: #000;  color:{{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
+                        <p style="color: #000;  color: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
                         <div class="bannar-btn-area">
                         <a href="{{ block.settings.shop-url}}" class="btn">{{ block.settings.shop}}</a>
                      </div>
