all button color update

--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -57,10 +57,10 @@
             <div class="row">
                <div class="col-12">
                      <div class="bannar-content {% if block.settings.vertecal == "center" %} text-center {% elsif block.settings.vertecal == 'left' %} text-left {% elsif block.settings.vertecal == 'right' %} text-right {% endif%} bannar-right-wrapper">
-                        <h1 style="color: #000;  color:{{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
-                        <p style="color: #000;  color: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
+                        <h1 style=" color:{{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
+                        <p style="  color: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
                         <div class="bannar-btn-area">
-                        <a href="{{ block.settings.shop-url}}" class="btn">{{ block.settings.shop}}</a>
+                        <a href="{{ block.settings.shop-url}}" class="btn" style="background-color:{{ block.settings.btn-b}};  color:{{ block.settings.btn-c}};">{{ block.settings.shop}}</a>
                      </div>
                   </div>
                </div>
@@ -179,6 +179,20 @@
                   "type": "url",
                   "id": "shop-url",
                   "label": "shoplink"
+                 },
+                 {
+                  "type": "color",
+                  "id": "btn-c",
+                  "label": "label",
+                  "default": "#000",
+                  "info": "Title color"
+                 },
+                 {
+                  "type": "color",
+                  "id": "btn-b",
+                  "label": "label",
+                  "default": "#b5b35c",
+                  "info": "Title color"
                  }
            ]
            
