slider update bannar

--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -1,10 +1,20 @@
 {% assign favorite_food = "" %}
+<section id="image-carousel" class="splide" aria-label="Beautiful Images">
+   <div class="splide__track">
+       <ul class="splide__list">
+          
+            
+            
+        
+
+
+
  {% for block in section.blocks %}
     {% case block.type %}
     {% when  'twoside'%}
    
 
-
+    <li class="splide__slide">
  <div class="two-slide-wrapper" id="hello">
 
    <div class="bannar-wrapper">
@@ -47,8 +57,9 @@
        </div>
      </div>
  </div>
+</li>
     {% when  'fullwidth'%}
-         
+    <li class="splide__slide">
    <div class="all-bannar-wrapper bannar-wrapper" >
       <div class="fulwidth-wrapper d-flex   {% if block.settings.Horizontal == "center" %}  align-items-center {% elsif block.settings.Horizontal == 'top' %}align-items-start {% elsif block.settings.Horizontal == 'bottom' %} align-items-end {% endif%}" style="background-image: url({{ block.settings.img | img_url:'master' }}); background-position: center center;
       background-repeat: no-repeat;
@@ -69,13 +80,15 @@
       </div>
    </div>
 
-
+</li>
 
 
 
     {% endcase %}
  {% endfor %}
-
+</ul>
+</div>
+</section>
 
 
 {% schema %}
@@ -261,10 +274,10 @@
 
 
 <style>
-   /* .fulwidth-wrapper{
-      min-height: 600px;
-   } */
+.splide__track {
 
+    overflow: visible;
+}
 </style>
 
 
@@ -287,5 +300,12 @@
  
 
 
-})
+});
+document.addEventListener( 'DOMContentLoaded', function () {
+  new Splide( '#image-carousel', {
+
+    arrows:false,
+    pagination : false,
+  } ).mount();
+} );
 </script>
