--- a/sections/customebannarslpidejs.liquid
+++ b/sections/customebannarslpidejs.liquid
@@ -1,7 +1,11 @@
+
+
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+
 {% assign favorite_food = "" %}
-<section id="image-carousel" class="splide" aria-label="Beautiful Images">
-   <div class="splide__track">
-       <ul class="splide__list">
+
           
             
             
@@ -14,8 +18,8 @@
     {% when  'twoside'%}
    
 
-    <li class="splide__slide">
- <div class="two-slide-wrapper" id="hello">
+ 
+ <div class="two-slide-wrapper" id="hello2">
 
    <div class="bannar-wrapper">
       <div class="bannar-shape-1">
@@ -57,9 +61,9 @@
        </div>
      </div>
  </div>
-</li>
+
     {% when  'fullwidth'%}
-    <li class="splide__slide">
+
    <div class="all-bannar-wrapper bannar-wrapper" >
       <div class="fulwidth-wrapper d-flex   {% if block.settings.Horizontal == "center" %}  align-items-center {% elsif block.settings.Horizontal == 'top' %}align-items-start {% elsif block.settings.Horizontal == 'bottom' %} align-items-end {% endif%}" style="background-image: url({{ block.settings.img | img_url:'master' }}); background-position: center center;
       background-repeat: no-repeat;
@@ -80,7 +84,7 @@
       </div>
    </div>
 
-</li>
+
 
 
 
@@ -93,7 +97,7 @@
 
 {% schema %}
     {
-        "name": "Slider",
+        "name": "Slider two",
         "class": "slider",
         "settings": [
    
@@ -274,10 +278,7 @@
 
 
 <style>
-.splide__track {
 
-    overflow: visible;
-}
 </style>
 
 
@@ -287,7 +288,7 @@
    window.addEventListener('load', function () {
       var newWindowWidth = $(window).width();
         if (newWindowWidth > 800) {
-  var elementha = document.getElementById('hello');
+  var elementha = document.getElementById('hello2');
 
    const getheight = elementha.offsetHeight;
 
@@ -302,11 +303,5 @@
    }
 
 });
-document.addEventListener( 'DOMContentLoaded', function () {
-  new Splide( '#image-carousel', {
 
-    arrows:false,
-    pagination : false,
-  } ).mount();
-} );
 </script>
