--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -307,6 +307,8 @@ document.addEventListener( 'DOMContentLoaded', function () {
 
     arrows:false,
     pagination : false,
+    perMove:1,
+    perPage: 1,
   } ).mount();
 } );
 </script>
