--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -309,6 +309,14 @@ document.addEventListener( 'DOMContentLoaded', function () {
     pagination : false,
     perMove:1,
     perPage: 1,
+    type: 'loop',
+      pagination : false,
+      drag   : 'free',
+      cover      : true,
+      gap       : 00,
+      perMove:1,
+      focus  : 'right',
+      interval: 4000,
   } ).mount();
 } );
 </script>
