--- a/sections/customebannarslpidejs.liquid
+++ b/sections/customebannarslpidejs.liquid
@@ -4,303 +4,326 @@
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
 
-{% assign favorite_food = "" %}
-
-          
-            
-            
-        
-
-
-
- {% for block in section.blocks %}
-    {% case block.type %}
-    {% when  'twoside'%}
-   
-
- 
- <div class="two-slide-wrapper" id="hello2">
-
-   <div class="bannar-wrapper">
-      <div class="bannar-shape-1">
-         <img 
-          data-sizes="auto"
-          data-src="{{ block.settings.img1 | img_url:'' }}" class="lazyload"
-          alt="">
-       </div>
-       <div class="bannar-shape-2">
-         <img data-sizes="auto"
-          data-src="{{ block.settings.img2 | img_url:'' }}" class="lazyload" alt="">
-       </div>
-       <div class="container-fluid">
-         <div class="row">
-           <div class="col-xl-6 col-md-12 p-0">
-               <div class="bannar-left-image">
-                 <img 
-                  data-src="{{ block.settings.img | img_url:'master' }}"
-                  data-srcset="{{ block.settings.img | img_url:'grande' }} 300w,
-                  {{ block.settings.img | img_url:'2048 x 2048' }} 600w,
-                  {{ block.settings.img | img_url:'master' }} 900w" class="lazyload" alt="">
-               </div>
-           </div>
-           <div class="col-xl-6 col-md-12 d-flex align-items-center justify-content-center">
-                 <div class="bannar-right-wrapper text-center">
-                   <div class="bannar-wev-image">
-                     <img 
-                      data-src="{{ block.settings.imgw | img_url:'' }}" class="lazyload" alt="">
-                   </div>
-                    <h1>{{ block.settings.h1 }}</h1>
-                    <p>{{ block.settings.p }}</p>
-                    <div class="bannar-btn-area">
-                    <a href="{{  block.settings.link }}" class="btn">{{ block.settings.shop }}</a>
-                   </div>
-                 </div>
-           </div>
-  
-         </div>
-       </div>
-     </div>
- </div>
-
-    {% when  'fullwidth'%}
-
-   <div class="all-bannar-wrapper bannar-wrapper" >
-      <div class="fulwidth-wrapper d-flex   {% if block.settings.Horizontal == "center" %}  align-items-center {% elsif block.settings.Horizontal == 'top' %}align-items-start {% elsif block.settings.Horizontal == 'bottom' %} align-items-end {% endif%}" style="background-image: url({{ block.settings.img | img_url:'master' }}); background-position: center center;
-      background-repeat: no-repeat;
-      background-size: cover;">
-          <div class="container">
-            <div class="row">
-               <div class="col-12">
-                     <div class="bannar-content {% if block.settings.vertecal == "center" %} text-center {% elsif block.settings.vertecal == 'left' %} text-left {% elsif block.settings.vertecal == 'right' %} text-right {% endif%} bannar-right-wrapper">
-                        <h1 style=" color:{{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
-                        <p style="  color: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
-                        <div class="bannar-btn-area">
-                        <a href="{{ block.settings.shop-url}}" class="btn" style="background-color:{{ block.settings.btn-b}};  color:{{ block.settings.btn-c}};">{{ block.settings.shop}}</a>
-                     </div>
-                  </div>
-               </div>
-            </div>
-          </div>
-      </div>
-   </div>
-
-
-
-
-
-    {% endcase %}
- {% endfor %}
-</ul>
-</div>
-</section>
-
-
-{% schema %}
-    {
-        "name": "Slider two",
-        "class": "slider",
-        "settings": [
-   
-        ],	
-        "blocks":[
-          {
-           "type": "fullwidth",
-           "name":"Full width",
-           "settings":[
-               {
-                  "type": "image_picker",
-                  "id": "img",
-                  "label": "Slider Main left Image"
-               },    
-                {
-                  "type": "select",
-                  "id": "vertecal",
-                  "label": "Content  vertical alignment",
-                  "options": [
-                     {
-                        "value": "center",
-                        "label": "center"
-                     },
-                     {
-                        "value": "left",
-                        "label": "left"
-                     },
-                     {
-                        "value": "right",
-                        "label": "right"
-                     }
-                  ],
-                  "default": "center"
-                },
-                {
-                  "type": "select",
-                  "id": "Horizontal",
-                  "label": "Content  Horizontal  alignment",
-                  "options": [
-                     {
-                        "value": "center",
-                        "label": "center"
-                     },
-                     {
-                        "value": "top",
-                        "label": "top"
-                     },
-                     {
-                        "value": "bottom",
-                        "label": "bottom"
-                     }
-                  ],
-                  "default": "center"
-                },
-               {
-                  "type": "text",
-                  "id": "h2",
-                  "label": "Select your title",
-                  "default": "Ny Forever",
-            
-                  "placeholder": "NY Forever"
-                 },
-                 {
-                  "type": "color",
-                  "id": "h2-c",
-                  "label": "label",
-                  "default": "#000",
-                  "info": "Title color"
-                 },
-                 {
-                  "type": "text",
-                  "id": "p",
-                  "label": "label",
-                  "default": "We Are Children of Immigrants",
-               
-                  "placeholder": "We Are Children of Immigrants"
-                 },
-                 {
-                  "type": "color",
-                  "id": "p-c",
-                  "label": "label",
-                  "default": "#000",
-                  "info": "Title color"
-                 },
-                 {
-                  "type": "text",
-                  "id": "shop",
-                  "label": "Shop Now",
-                  "default": "Shop Now",
-            
-                  "placeholder": "Shop Now"
-                 },
-      
-      
-                 {
-                  "type": "url",
-                  "id": "shop-url",
-                  "label": "shoplink"
-                 },
-                 {
-                  "type": "color",
-                  "id": "btn-c",
-                  "label": "label",
-                  "default": "#000",
-                  "info": "Title color"
-                 },
-                 {
-                  "type": "color",
-                  "id": "btn-b",
-                  "label": "label",
-                  "default": "#b5b35c",
-                  "info": "Title color"
-                 }
-           ]
+ {% assign favorite_food = "" %}
+ <section id="image-carousel" class="splide" aria-label="Beautiful Images">
+    <div class="splide__track">
+        <ul class="splide__list">
            
-          },
-          {
-            "type":"twoside",
-            "name":"two side",
-            "settings":[
-            {
-               "type": "text",
-               "id": "h1",
-               "label": "Slider Title",
-               "default": "LOUD & PROUD",
-               "placeholder": "LOUD & PROUD"
-            },
-            {
-               "type": "text",
-               "id": "p",
-               "label": "Slider Details",
-               "default": "We Are Children of Immigrats",
-               "placeholder": "We Are Children of Immigrats"
-            },
-            {
-               "type": "text",
-               "id": "shop",
-               "label": "Shop Now",
-               "default": "Shop Now",
-               "placeholder": "Shop Now"
-            },
-            {
-               "type": "url",
-               "id": "link",
-               "label": "Shop Now link",
-               "info": "Button link"
-            },
-            {
-               "type": "image_picker",
-               "id": "img",
-               "label": "Slider Main left Image"
-            },
-            {
-               "type": "image_picker",
-               "id": "imgw",
-               "label": "Slider wave  Image"
-            },
-            {
-               "type": "image_picker",
-               "id": "img1",
-               "label": "Slider Shap 01"
-            },
-            {
-               "type": "image_picker",
-               "id": "img2",
-               "label": "Slider Shap 01"
-            }
-            ]
-          }
-        ],
-        "presets": [
-            {
-              "name": "Bannar"
-            }]
-        
-    }
-{% endschema %}
-
-
-<style>
-
-</style>
-
-
-
-<script> 
-
-
-      var newWindowWidth = $(window).width();
-        if (newWindowWidth > 800) {
-  var elementha = document.getElementById('hello2');
-
-   const getheight = elementha.offsetHeight;
-
-     
-  [...document.querySelectorAll(".fulwidth-wrapper")].map(
-    (element, index, array) => {
-
-      element.style["height"] = getheight + "px";
-    }
-  );
+             
+             
+         
  
-   }
-
-
-</script>
+ 
+ 
+  {% for block in section.blocks %}
+     {% case block.type %}
+     {% when  'twoside'%}
+    
+ 
+     <li class="splide__slide">
+  <div class="two-slide-wrapper" id="hello">
+ 
+    <div class="bannar-wrapper">
+       <div class="bannar-shape-1">
+          <img 
+           data-sizes="auto"
+           data-src="{{ block.settings.img1 | img_url:'' }}" class="lazyload"
+           alt="">
+        </div>
+        <div class="bannar-shape-2">
+          <img data-sizes="auto"
+           data-src="{{ block.settings.img2 | img_url:'' }}" class="lazyload" alt="">
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-6 col-md-12 p-0">
+                <div class="bannar-left-image">
+                  <img 
+                   data-src="{{ block.settings.img | img_url:'master' }}"
+                   data-srcset="{{ block.settings.img | img_url:'grande' }} 300w,
+                   {{ block.settings.img | img_url:'2048 x 2048' }} 600w,
+                   {{ block.settings.img | img_url:'master' }} 900w" class="lazyload" alt="">
+                </div>
+            </div>
+            <div class="col-xl-6 col-md-12 d-flex align-items-center justify-content-center">
+                  <div class="bannar-right-wrapper text-center">
+                    <div class="bannar-wev-image">
+                      <img 
+                       data-src="{{ block.settings.imgw | img_url:'' }}" class="lazyload" alt="">
+                    </div>
+                     <h1>{{ block.settings.h1 }}</h1>
+                     <p>{{ block.settings.p }}</p>
+                     <div class="bannar-btn-area">
+                     <a href="{{  block.settings.link }}" class="btn">{{ block.settings.shop }}</a>
+                    </div>
+                  </div>
+            </div>
+   
+          </div>
+        </div>
+      </div>
+  </div>
+ </li>
+     {% when  'fullwidth'%}
+     <li class="splide__slide">
+    <div class="all-bannar-wrapper bannar-wrapper" >
+       <div class="fulwidth-wrapper d-flex   {% if block.settings.Horizontal == "center" %}  align-items-center {% elsif block.settings.Horizontal == 'top' %}align-items-start {% elsif block.settings.Horizontal == 'bottom' %} align-items-end {% endif%}" style="background-image: url({{ block.settings.img | img_url:'master' }}); background-position: center center;
+       background-repeat: no-repeat;
+       background-size: cover;">
+           <div class="container">
+             <div class="row">
+                <div class="col-12">
+                      <div class="bannar-content {% if block.settings.vertecal == "center" %} text-center {% elsif block.settings.vertecal == 'left' %} text-left {% elsif block.settings.vertecal == 'right' %} text-right {% endif%} bannar-right-wrapper">
+                         <h1 style=" color:{{ block.settings.h2-c}} ;">{{ block.settings.h2}}</h1>
+                         <p style="  color: {{ block.settings.p-c}};">{{ block.settings.p}}</p>
+                         <div class="bannar-btn-area">
+                         <a href="{{ block.settings.shop-url}}" class="btn" style="background-color:{{ block.settings.btn-b}};  color:{{ block.settings.btn-c}};">{{ block.settings.shop}}</a>
+                      </div>
+                   </div>
+                </div>
+             </div>
+           </div>
+       </div>
+    </div>
+ 
+ </li>
+ 
+ 
+ 
+     {% endcase %}
+  {% endfor %}
+ </ul>
+ </div>
+ </section>
+ 
+ 
+ {% schema %}
+     {
+         "name": "Slider",
+         "class": "slider",
+         "settings": [
+    
+         ],	
+         "blocks":[
+           {
+            "type": "fullwidth",
+            "name":"Full width",
+            "settings":[
+                {
+                   "type": "image_picker",
+                   "id": "img",
+                   "label": "Slider Main left Image"
+                },    
+                 {
+                   "type": "select",
+                   "id": "vertecal",
+                   "label": "Content  vertical alignment",
+                   "options": [
+                      {
+                         "value": "center",
+                         "label": "center"
+                      },
+                      {
+                         "value": "left",
+                         "label": "left"
+                      },
+                      {
+                         "value": "right",
+                         "label": "right"
+                      }
+                   ],
+                   "default": "center"
+                 },
+                 {
+                   "type": "select",
+                   "id": "Horizontal",
+                   "label": "Content  Horizontal  alignment",
+                   "options": [
+                      {
+                         "value": "center",
+                         "label": "center"
+                      },
+                      {
+                         "value": "top",
+                         "label": "top"
+                      },
+                      {
+                         "value": "bottom",
+                         "label": "bottom"
+                      }
+                   ],
+                   "default": "center"
+                 },
+                {
+                   "type": "text",
+                   "id": "h2",
+                   "label": "Select your title",
+                   "default": "Ny Forever",
+             
+                   "placeholder": "NY Forever"
+                  },
+                  {
+                   "type": "color",
+                   "id": "h2-c",
+                   "label": "label",
+                   "default": "#000",
+                   "info": "Title color"
+                  },
+                  {
+                   "type": "text",
+                   "id": "p",
+                   "label": "label",
+                   "default": "We Are Children of Immigrants",
+                
+                   "placeholder": "We Are Children of Immigrants"
+                  },
+                  {
+                   "type": "color",
+                   "id": "p-c",
+                   "label": "label",
+                   "default": "#000",
+                   "info": "Title color"
+                  },
+                  {
+                   "type": "text",
+                   "id": "shop",
+                   "label": "Shop Now",
+                   "default": "Shop Now",
+             
+                   "placeholder": "Shop Now"
+                  },
+       
+       
+                  {
+                   "type": "url",
+                   "id": "shop-url",
+                   "label": "shoplink"
+                  },
+                  {
+                   "type": "color",
+                   "id": "btn-c",
+                   "label": "label",
+                   "default": "#000",
+                   "info": "Title color"
+                  },
+                  {
+                   "type": "color",
+                   "id": "btn-b",
+                   "label": "label",
+                   "default": "#b5b35c",
+                   "info": "Title color"
+                  }
+            ]
+            
+           },
+           {
+             "type":"twoside",
+             "name":"two side",
+             "settings":[
+             {
+                "type": "text",
+                "id": "h1",
+                "label": "Slider Title",
+                "default": "LOUD & PROUD",
+                "placeholder": "LOUD & PROUD"
+             },
+             {
+                "type": "text",
+                "id": "p",
+                "label": "Slider Details",
+                "default": "We Are Children of Immigrats",
+                "placeholder": "We Are Children of Immigrats"
+             },
+             {
+                "type": "text",
+                "id": "shop",
+                "label": "Shop Now",
+                "default": "Shop Now",
+                "placeholder": "Shop Now"
+             },
+             {
+                "type": "url",
+                "id": "link",
+                "label": "Shop Now link",
+                "info": "Button link"
+             },
+             {
+                "type": "image_picker",
+                "id": "img",
+                "label": "Slider Main left Image"
+             },
+             {
+                "type": "image_picker",
+                "id": "imgw",
+                "label": "Slider wave  Image"
+             },
+             {
+                "type": "image_picker",
+                "id": "img1",
+                "label": "Slider Shap 01"
+             },
+             {
+                "type": "image_picker",
+                "id": "img2",
+                "label": "Slider Shap 01"
+             }
+             ]
+           }
+         ],
+         "presets": [
+             {
+               "name": "Bannar"
+             }]
+         
+     }
+ {% endschema %}
+ 
+ 
+ <style>
+ /* .splide__track {
+ 
+     overflow: visible;
+ } */
+ </style>
+ 
+ 
+ 
+ <script> 
+ 
+    window.addEventListener('load', function () {
+       var newWindowWidth = $(window).width();
+         if (newWindowWidth > 800) {
+   var elementha = document.getElementById('hello');
+ 
+    const getheight = elementha.offsetHeight;
+ 
+      
+   [...document.querySelectorAll(".fulwidth-wrapper")].map(
+     (element, index, array) => {
+ 
+       element.style["height"] = getheight + "px";
+     }
+   );
+  
+    }
+ 
+ });
+ document.addEventListener( 'DOMContentLoaded', function () {
+   new Splide( '#image-carousel', {
+ 
+     arrows:false,
+     pagination : false,
+     perMove:1,
+     perPage: 1,
+     type: 'loop',
+       pagination : false,
+       drag   : 'free',
+       cover      : true,
+       gap       : 00,
+       perMove:1,
+       focus  : 'right',
+       interval: 4000,
+   } ).mount();
+ } );
+ </script>
+ 
